@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-24T08:08:53Z",
+  "timestamp" : "2022-08-26T00:39:03Z",
   "count_outdated" : 46,
   "uniques_outdated" : 16,
-  "count" : 52,
-  "uniques" : 19,
+  "count" : 53,
+  "uniques" : 20,
   "views" : [
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
