@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
